--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,8 +8,23 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
+        <!-- Main Activity -->
         <activity
             android:name=".MainActivity"
+            android:screenOrientation="portrait">
+
+        </activity>
+
+        <!-- Instructions -->
+        <activity
+            android:name=".Instructions"
+            android:screenOrientation="portrait">
+        </activity>
+
+        <!-- Splash Screen -->
+        <activity
+            android:name=".SplashScreen"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -17,7 +32,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Instructions"></activity>
     </application>
 
 </manifest>
